--- a/build.gradle
+++ b/build.gradle
@@ -41,69 +41,25 @@ dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.5'
 }
 
-publishing {
-    repositories {
-        maven {
-            url "s3://stockstream-artifacts/releases"
-            credentials(AwsCredentials) {
-                accessKey System.env.'GRADLE_AWS_ACCESS_KEY'
-                secretKey System.env.'GRADLE_AWS_SECRET_KEY'
-            }
-        }
-    }
-    publications {
-        mavenJava(MavenPublication) {
-            groupId group
-            artifactId "robinhoodjavaclient"
-            version version
-            from components.java
-        }
-    }
-}
-
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-
-            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                authentication(userName: ossrhUsername, password: ossrhPassword)
-            }
-
-            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-                authentication(userName: ossrhUsername, password: ossrhPassword)
-            }
-
-            pom.project {
-                name 'Robinhood Java Client'
-                packaging 'jar'
-                description 'A simple Java library for connecting to the Robinhood API.'
-                url 'https://github.com/cheddartv/RobinhoodJavaClient'
-
-                scm {
-                    connection 'scm:git:https://github.com/cheddartv/RobinhoodJavaClient.git'
-                    developerConnection 'scm:git:https://github.com/cheddartv/RobinhoodJavaClient.git'
-                    url 'https://github.com/cheddartv/RobinhoodJavaClient'
-                }
-
-                licenses {
-                    license {
-                        name 'The MIT License'
-                        url 'https://opensource.org/licenses/MIT'
-                    }
-                }
-
-                developers {
-                    developer {
-                        id 'mroberts'
-                        name 'Mike Roberts'
-                        email 'mike.roberts@cheddar.com'
-                    }
-                }
-            }
-        }
-    }
-}
+//publishing {
+//    repositories {
+//        maven {
+//            url "s3://stockstream-artifacts/releases"
+//            credentials(AwsCredentials) {
+//                accessKey System.env.'GRADLE_AWS_ACCESS_KEY'
+//                secretKey System.env.'GRADLE_AWS_SECRET_KEY'
+//            }
+//        }
+//    }
+//    publications {
+//        mavenJava(MavenPublication) {
+//            groupId group
+//            artifactId "robinhoodjavaclient"
+//            version version
+//            from components.java
+//        }
+//    }
+//}
 
 task jarFile(type: Jar) {
     manifest.from jar.manifest
