--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
     compile group: 'com.google.guava', name: 'guava', version: '21.0'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.5'
+    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.5'
     compile group: 'commons-io', name: 'commons-io', version: '2.5'
     compile group: 'commons-lang', name: 'commons-lang', version: '2.5'
     compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
